--- a/index.html
+++ b/index.html
@@ -68,14 +68,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
   <header>
     <img src="assets/img/logo.svg" alt="Logo">
-    <h1 class="headline">CENTENAS DE PESSOAS QUE COMEÇARAM DO ABSOLUTO ZERO CONSEGUIRAM TRANSFORMAR SEU INSTAGRAM EM UMA <span style="color: #E5AC5F;">MÁQUINA DE FAZER DINHEIRO EM POUCOS DIAS COM UMA ÚNICA ESTRATÉGIA</span></h1>
-    <p class="subheadline"> <span style="color: #E5AC5F;">Assista o vídeo abaixo e descubra o segredo</span> que tem ajudado pessoas a alcançar + de 5 mil reais todos os meses com as redes sociais no mercado de Marketing de Influência <span class="highlighted-text">à partir de 500 seguidores</span></p>
     <div class="content">
       <div class="video-container">
-        <iframe src="https://scripts.converteai.net/f13659f9-694c-4fb4-83a7-b25bfadf2ed0/players/64bade554d8d330009ae3074/embed.html" frameborder="0" allowfullscreen></iframe>
+        <div id="vid_64bade554d8d330009ae3074" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_64bade554d8d330009ae3074" src="https://images.converteai.net/f13659f9-694c-4fb4-83a7-b25bfadf2ed0/players/64bade554d8d330009ae3074/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_64bade554d8d330009ae3074" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_64bade554d8d330009ae3074">var s=document.createElement("script");s.src="https://scripts.converteai.net/f13659f9-694c-4fb4-83a7-b25bfadf2ed0/players/64bade554d8d330009ae3074/player.js",s.async=!0,document.head.appendChild(s);</script>
       </div>
-      <a href="#action-button-section" class="action-button" id="btnVendas">GARANTA SUA VAGA AGORA</a>
-    </div>
   </header>
 
   <img src="assets/img/pt2-responsivo.png" alt="Imagem Responsiva" class="responsive-image">
@@ -92,14 +88,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
   <script>
     // Obtém os elementos das classes usando querySelectorAll
-    const btnVendas = document.querySelector('.action-button');
     const imgResponsive = document.querySelector('.responsive-image');
     const imgResponsive2 = document.querySelector('.responsive-image2');
     const newSection = document.querySelector('.new-section');
 
     // Função para exibir o botão, as imagens e a seção após 11 minutos e 7 segundos
     function exibirElementosComDelay() {
-      btnVendas.style.display = 'inline-block'; // Ou 'block', dependendo do comportamento desejado
       imgResponsive.style.display = 'block'; // Ou 'inline-block', dependendo do comportamento desejado
       imgResponsive2.style.display = 'block'; // Ou 'inline-block', dependendo do comportamento desejado
       newSection.style.display = 'block'; // Ou 'block', dependendo do comportamento desejado
